--- a/WebContent/address.xhtml
+++ b/WebContent/address.xhtml
@@ -1,8 +1,6 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		
@@ -15,20 +13,27 @@
 			}
 		</style>
 		
-		<title>Login</title>
+		<title>Calendar</title>
 	</head>
 	
 	
 	<body>
 		<center>
-			<h1 style="font-size: 60px; padding-bottom: 70px;">Login</h1>
+			<h1 style="font-size: 60px; padding-bottom: 70px;">Calendar</h1>
 			
 			<form class="form-horizontal" action="CalendarServlet" method="post">
 				<div class="form-group" style="width: 300px;">
 					<input type="text" class="form-control" name="username" placeholder="Username"></input>
 					<input type="password" class="form-control" name="password" placeholder="Password"></input>
-					<input type="submit" class="form-control btn-info" value="Login"></input>
+					<input type="submit" class="form-control btn-success" value="Login"></input>
 					<input type="hidden" name="formType" value="loginForm"></input>
+				</div>
+			</form>
+			
+			<form class="form-horizontal" action="CalendarServlet" method="post">
+				<div class="form-group" style="width: 300px;">
+					<input type="submit" class="form-control btn-info" name="register" value="Register"></input>
+					<input type="hidden" name="formType" value="registerButton"></input>
 				</div>
 			</form>
 		</center>
